--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ pandas==2.2.2
 pycryptodome==3.20.0
 python-binance==1.0.19
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 pytz==2024.1
 regex==2024.5.15
 requests==2.32.3
