--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ click==8.1.7
 dateparser==1.2.0
 Flask==3.0.3
 Flask-Cors==4.0.1
+Flask-SQLAlchemy==3.1.1
 frozenlist==1.4.1
 idna==3.7
 itsdangerous==2.2.0
@@ -24,6 +25,8 @@ pytz==2024.1
 regex==2024.5.15
 requests==2.32.3
 six==1.16.0
+SQLAlchemy==2.0.31
+typing_extensions==4.12.2
 tzdata==2024.1
 tzlocal==5.2
 ujson==5.10.0
